updated all libs

--- a/apps/word-search/project.json
+++ b/apps/word-search/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/word-search/src",
   "projectType": "application",
+  "tags": [],
   "targets": {
     "build": {
       "executor": "@nx/webpack:webpack",
@@ -67,7 +68,7 @@
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/word-search/**/*.{ts,tsx,js,jsx}"]
@@ -87,6 +88,5 @@
         }
       }
     }
-  },
-  "tags": []
+  }
 }
