--- a/package.json
+++ b/package.json
@@ -2,68 +2,67 @@
   "name": "@word-search/source",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": ">=22.18.0"
+  },
   "scripts": {
     "start": "nx serve word-search"
   },
   "private": true,
   "dependencies": {
-    "@nx/next": "16.3.2",
-    "@swc/helpers": "~0.5.0",
-    "@types/lodash": "^4.14.196",
-    "comlink": "^4.4.1",
+    "comlink": "^4.4.2",
     "lodash": "^4.17.21",
     "n-readlines": "^1.0.1",
-    "next": "13.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-is": "18.2.0",
-    "react-router-dom": "6.11.2",
-    "styled-components": "5.3.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-is": "^19.1.1",
+    "react-router-dom": "^7.8.0",
+    "styled-components": "^6.1.19",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "@nx/cypress": "16.3.2",
-    "@nx/eslint-plugin": "16.3.2",
-    "@nx/jest": "16.3.2",
-    "@nx/js": "16.3.2",
-    "@nx/linter": "16.3.2",
-    "@nx/react": "^16.3.2",
-    "@nx/webpack": "16.3.2",
-    "@nx/workspace": "16.3.2",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@babel/preset-react": "^7.27.1",
+    "@nx/eslint": "21.3.11",
+    "@nx/eslint-plugin": "21.3.11",
+    "@nx/jest": "21.3.11",
+    "@nx/js": "21.3.11",
+    "@nx/react": "21.3.11",
+    "@nx/webpack": "21.3.11",
+    "@nx/workspace": "21.3.11",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
     "@svgr/webpack": "^8.0.1",
-    "@swc/cli": "~0.1.62",
-    "@swc/core": "~1.3.51",
-    "@swc/plugin-styled-components": "^1.5.67",
-    "@testing-library/react": "14.0.0",
-    "@types/jest": "^29.4.0",
-    "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@types/react-is": "17.0.3",
-    "@types/styled-components": "5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "babel-jest": "^29.4.1",
-    "babel-plugin-styled-components": "1.10.7",
-    "cypress": "^12.11.0",
-    "eslint": "~8.15.0",
-    "eslint-config-next": "13.4.1",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "nx": "16.3.2",
-    "prettier": "^2.6.2",
-    "react-refresh": "^0.10.0",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "typescript": "~5.0.2",
-    "url-loader": "^4.1.1"
+    "@swc/cli": "0.7.8",
+    "@swc/core": "1.13.3",
+    "@swc/helpers": "0.5.17",
+    "@swc/plugin-styled-components": "^9.0.3",
+    "@testing-library/react": "16.3.0",
+    "@types/jest": "30.0.0",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^22.9.0",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7",
+    "@types/react-is": "19.0.0",
+    "@types/styled-components": "5.1.34",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
+    "babel-jest": "30.0.5",
+    "babel-plugin-styled-components": "2.1.4",
+    "eslint": "^9.32.0",
+    "eslint-config-next": "15.4.6",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "jest": "30.0.5",
+    "jest-environment-jsdom": "30.0.5",
+    "nx": "21.3.11",
+    "prettier": "^3.6.2",
+    "react-refresh": "^0.17.0",
+    "ts-jest": "29.4.1",
+    "ts-node": "10.9.2",
+    "typescript": "^5.9.2",
+    "url-loader": "^4.1.1",
+    "jest-util": "30.0.5"
   }
 }
