--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "node": ">=22.18.0"
   },
   "scripts": {
-    "start": "nx serve word-search"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "private": true,
   "dependencies": {
@@ -18,51 +21,29 @@
     "react-is": "^19.1.1",
     "react-router-dom": "^7.8.0",
     "styled-components": "^6.1.19",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "vite-plugin-comlink": "^5.3.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.27.1",
-    "@nx/eslint": "21.3.11",
-    "@nx/eslint-plugin": "21.3.11",
-    "@nx/jest": "21.3.11",
-    "@nx/js": "21.3.11",
-    "@nx/react": "21.3.11",
-    "@nx/webpack": "21.3.11",
-    "@nx/workspace": "21.3.11",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
-    "@svgr/webpack": "^8.0.1",
-    "@swc/cli": "0.7.8",
-    "@swc/core": "1.13.3",
-    "@swc/helpers": "0.5.17",
-    "@swc/plugin-styled-components": "^9.0.3",
-    "@testing-library/react": "16.3.0",
-    "@types/jest": "30.0.0",
+    "@eslint/js": "^9.32.0",
     "@types/lodash": "^4.17.20",
     "@types/node": "^22.9.0",
     "@types/react": "19.1.9",
     "@types/react-dom": "19.1.7",
     "@types/react-is": "19.0.0",
     "@types/styled-components": "5.1.34",
-    "@typescript-eslint/eslint-plugin": "^8.39.0",
-    "@typescript-eslint/parser": "^8.39.0",
-    "babel-jest": "30.0.5",
+    "@vitejs/plugin-react": "^4.7.0",
     "babel-plugin-styled-components": "2.1.4",
     "eslint": "^9.32.0",
-    "eslint-config-next": "15.4.6",
-    "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-import": "2.32.0",
-    "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "jest": "30.0.5",
-    "jest-environment-jsdom": "30.0.5",
-    "nx": "21.3.11",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
     "prettier": "^3.6.2",
-    "react-refresh": "^0.17.0",
-    "ts-jest": "29.4.1",
     "ts-node": "10.9.2",
     "typescript": "^5.9.2",
+    "typescript-eslint": "^8.39.0",
     "url-loader": "^4.1.1",
-    "jest-util": "30.0.5"
+    "vite": "^7.1.0"
   }
 }
